fixed jquery hide on mobile

--- a/css/courses.css
+++ b/css/courses.css
@@ -1,3 +1,3 @@
-.wrapper {
-	margin-top: -90px;
-}
+/*.wrapper {*/
+	/*margin-top: 0px*/
+/*}*/
