--- a/css/music.css
+++ b/css/music.css
@@ -19,7 +19,7 @@ body {
 	overflow-x: hidden;
 }
 
-.wrapper {
-	margin-top: -90px
-}
+/*.wrapper {*/
+	/*margin-top: -90px*/
+/*}*/
 
